--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,19 +15,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ "ubuntu-latest", "windows-latest", "macos-latest" ]
-        python-version: [ "3.10", "3.11" ]
+        platform: [ ubuntu-latest, windows-latest, macos-latest ]
+        python-version: [ 3.10, 3.11 ]
 
-    runs-on: "${{ matrix.platform }}"
+    runs-on: ${{ matrix.platform }}
     timeout-minutes: 20
 
     steps:
-      - uses: "actions/checkout@v3"
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "${{ matrix.python-version }}"
+          python-version: ${{ matrix.python-version }}
 
       - name: "Install the package with pip"
         run: python -m pip install .[test]
