--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,10 +2,12 @@ name: Upload Python Package to PyPI
 
 on:
   workflow_dispatch:
+  release:
+    types: [ published ]
 
 
 jobs:
-  deploy:
+  publish:
 
     runs-on: ubuntu-latest
 
@@ -25,9 +27,8 @@ jobs:
       - name: Build package 📦
         run: python -m build
 
-      - name: Publish package 📦 to TestPyPI
+      - name: Publish package 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN_TEST }}
-          repository_url: https://test.pypi.org/legacy/
+          password: ${{ secrets.PYPI_API_TOKEN }}
