--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -29,6 +29,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: "Install uproot"
+        # We want to run tests with and without uproot
+        if: "matrix.python-version == 3.9 || matrix.python-version == 3.10"
+        run: |
+          python -m pip install uproot
+
       - name: "Install the package with pip"
         run: python -m pip install .[test]
 
